# chatkit-incident-management

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  test_api.py  test_api.sh
backend/: __init__.py  agent.py  auth.py  chatkit_server.py  main.py  models.py  requirements.txt  store.py  tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatKitPanel.tsx  ChatPanel.tsx
frontend/src/components/layout/: ActivityFeed.tsx  DashboardLayout.tsx  IncidentBanner.tsx  PageLayout.tsx
frontend/src/components/panels/: CSMPortal.tsx  FinancePortal.tsx  ITConsole.tsx  OpsDashboard.tsx  RolePanel.tsx
frontend/src/components/ui/: BackButton.tsx  MetricTile.tsx  RoleButton.tsx  TriggerButton.tsx
frontend/src/context/: IncidentContext.tsx
frontend/src/hooks/: useActivityFeed.ts
frontend/src/pages/: CustomerServicePage.tsx  FinancePage.tsx  ITPage.tsx  MainPage.tsx  OperationsPage.tsx
frontend/src/types/: index.ts
